{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 25,
  "lineage": "679f9012-4749-19e0-b57a-8f71b5625910",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:security-group/sg-02d9bf8b02fe63db5",
            "description": "Security Group - App server Node.js Phase 2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d9bf8b02fe63db5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP public access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH admin access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "universite-exemple-poc-sg-app",
            "name_prefix": "",
            "owner_id": "535532184875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "universite-exemple-poc-sg-app"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-sg-app",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:security-group/sg-0db5658e90a658eaf",
            "description": "Security Group RDS - MySQL access from EC2 app only",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Internal VPC egress only",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db5658e90a658eaf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 app security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d9bf8b02fe63db5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "universite-exemple-poc-sg-rds",
            "name_prefix": "",
            "owner_id": "535532184875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "universite-exemple-poc-sg-rds"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-sg-rds",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.app",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0193f17a70455a4c7",
            "arn": "arn:aws:ec2:us-east-1:535532184875:elastic-ip/eipalloc-0193f17a70455a4c7",
            "domain": "vpc",
            "id": "eipalloc-0193f17a70455a4c7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-157-1-72.compute-1.amazonaws.com",
            "public_ip": "54.157.1.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "universite-exemple-poc-nat-eip"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-nat-eip",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:internet-gateway/igw-08eec468161e491b9",
            "id": "igw-08eec468161e491b9",
            "owner_id": "535532184875",
            "tags": {
              "Name": "universite-exemple-poc-igw"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-igw",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            },
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0193f17a70455a4c7",
            "association_id": "eipassoc-0d80ae473b3cd2c74",
            "connectivity_type": "public",
            "id": "nat-0dc72654e27b22562",
            "network_interface_id": "eni-02a05053f07db64e0",
            "private_ip": "10.0.1.81",
            "public_ip": "54.157.1.72",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031a682077e19634a",
            "tags": {
              "Name": "universite-exemple-poc-nat-gw"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-nat-gw",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:route-table/rtb-028166fa455762002",
            "id": "rtb-028166fa455762002",
            "owner_id": "535532184875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dc72654e27b22562",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "universite-exemple-poc-private-rt"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-private-rt",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:route-table/rtb-04b6d3dc1dc3d0ff4",
            "id": "rtb-04b6d3dc1dc3d0ff4",
            "owner_id": "535532184875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eec468161e491b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "universite-exemple-poc-public-rt"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-public-rt",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08675676a753d09d7",
            "route_table_id": "rtb-028166fa455762002",
            "subnet_id": "subnet-00ec59431b17e97fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc3b8d8418485167",
            "route_table_id": "rtb-028166fa455762002",
            "subnet_id": "subnet-0dd8d15e0e99fb927"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6f3411cbbaf2b02",
            "route_table_id": "rtb-04b6d3dc1dc3d0ff4",
            "subnet_id": "subnet-031a682077e19634a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447db7172f88529f",
            "route_table_id": "rtb-04b6d3dc1dc3d0ff4",
            "subnet_id": "subnet-0a5087c09760a6dba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:subnet/subnet-00ec59431b17e97fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec59431b17e97fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535532184875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "Name": "universite-exemple-poc-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-private-subnet-1",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC",
              "Type": "Private"
            },
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:subnet/subnet-0dd8d15e0e99fb927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd8d15e0e99fb927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535532184875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "Name": "universite-exemple-poc-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-private-subnet-2",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC",
              "Type": "Private"
            },
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:subnet/subnet-031a682077e19634a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031a682077e19634a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535532184875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "Name": "universite-exemple-poc-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-public-subnet-1",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC",
              "Type": "Public"
            },
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:subnet/subnet-0a5087c09760a6dba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5087c09760a6dba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535532184875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "Name": "universite-exemple-poc-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-public-subnet-2",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC",
              "Type": "Public"
            },
            "vpc_id": "vpc-0a9e7b3d140ed10b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535532184875:vpc/vpc-0a9e7b3d140ed10b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcc0175c9b173913",
            "default_route_table_id": "rtb-0bd398bb0673530c6",
            "default_security_group_id": "sg-0840619e3f83207b7",
            "dhcp_options_id": "dopt-0bf72c9774d7788d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9e7b3d140ed10b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd398bb0673530c6",
            "owner_id": "535532184875",
            "tags": {
              "Name": "universite-exemple-poc-vpc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "Terraform",
              "Name": "universite-exemple-poc-vpc",
              "Phase": "Phase2-Decouplage",
              "Project": "UniversiteExemple-POC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}